--- a/index.html
+++ b/index.html
@@ -5,18 +5,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
     <link rel="icon" type="image/svg+xml" href="/output.webp" />
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.9.0/styles/github-dark.min.css" rel="stylesheet">
     <link href="/src/style.css" rel="stylesheet">
     <link href="/src/theme.css" rel="stylesheet">
 
     <title>md-editor</title>
   </head>
-  <body class="bg-background text-foreground">
-    <main class="flex flex-row">
-        <textarea id="editor" class="w-[50%] p-5 appearance-none border-0 p-0 m-0 bg-transparent outline-none resize-none" placeholder="type here"></textarea>
-        <div id="view" class="p-5">
+   <body class="bg-background text-foreground">
+     <main>
+         <div id="editor" class="p-5 min-h-screen">
 
-        </div>
-    </main>
+         </div>
+     </main>
     <script type="module" src="/src/main.ts"></script>
   </body>
 </html>
