--- a/index.html
+++ b/index.html
@@ -17,15 +17,15 @@
     <button id="sidebar-toggle" class="sidebar-toggle">☰</button>
        <div class="sidebar-content">
          <div class="sidebar-header">
-           <h3>Documents</h3>
-           <button id="new-doc">+ New</button>
-         </div>
-         <ul id="doc-list" class="doc-list"></ul>
+            <h3>Notes</h3>
+            <button id="new-note">+ New</button>
+          </div>
+          <ul id="note-list" class="note-list"></ul>
        </div>
      </div>
 
      <main class="main-content">
-         <div id="editor" class="p-5 min-h-screen min-w-screen">
+         <div id="editor" class=" py-10 px-15 min-h-screen min-w-screen">
 
          </div>
      </main>
