--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <body class="bg-background text-foreground">
 
      <div id="sidebar" class="fixed left-0 top-0 h-screen w-[250px] md:w-[250px] bg-card border-r border-border -translate-x-full transition-transform duration-100 ease z-[1000]">
-        <button id="sidebar-toggle" class="absolute right-[-40px] top-2.5 bg-primary text-primary-foreground border border-ring px-2 pb-1 rounded-md cursor-pointer text-base">☰</button>
+        <button id="sidebar-toggle" class="absolute right-[-40px] top-2.5 bg-primary text-primary-foreground border border-ring px-2 md:pb-1 pb-0 rounded-md cursor-pointer text-base">☰</button>
 
         <div class="h-full flex flex-col">
           <div class="p-5 flex justify-between items-center mb-5 pb-2.5 border-b border-border">
