--- a/index.html
+++ b/index.html
@@ -25,12 +25,11 @@
 
       <div class="h-full flex flex-col">
         <div
-          class="p-5 flex justify-between items-center mb-5 pb-2.5 border-b border-border"
+          class="p-2.5 flex items-center border-b border-border"
         >
-          <h3 class="m-0 text-lg text-foreground">Notes</h3>
           <button
             id="new-note"
-            class="bg-primary text-primary-foreground border border-ring px-2 py-1 rounded-md cursor-pointer text-sm"
+            class="bg-primary text-primary-foreground border border-ring px-2 py-1 rounded-md cursor-pointer text-sm w-full"
           >
             + New
           </button>
