fix overflow issue

--- a/index.html
+++ b/index.html
@@ -41,10 +41,10 @@
       </div>
     </div>
 
-    <main class="ml-0 transition-margin-left duration-300 ease min-h-screen">
+    <main class="ml-0 transition-margin-left duration-300 ease min-h-screen max-w-full overflow-x-hidden">
       <div
         id="editor"
-        class="py-10 px-15 min-h-screen min-w-screen flex items-center"
+        class="md:py-10 md:px-15 p-5 min-h-screen w-full max-w-full break-word overflow-wrap-anywhere whitespace-normal"
       ></div>
     </main>
 
